--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "template-discord-bot",
+    "name": "seyfert-bot",
     "version": "1.0.0",
     "description": "",
     "main": "src/index.js",
-    "repository": "https://github.com/nhutlamm/template-discord-bot.git",
+    "repository": "https://github.com/nhutlamm/seyfert-bot.git",
     "author": "nhutlamm",
     "scripts": {
         "start": "node src/index.js",
@@ -13,21 +13,12 @@
         "del": "rm -rf node_modules && npm install"
     },
     "dependencies": {
-        "discord-hybrid-sharding": "^2.2.0",
-        "discord.js": "^14.15.3",
-        "dotenv": "^16.4.5",
-        "express": "^4.19.2",
-        "mongoose": "^8.5.1",
-        "nanoid": "^3.3.7"
+        "dotenv": "^16.4.5"
     },
     "devDependencies": {
         "chalk": "^4.1.2",
-        "module-alias": "^2.2.3",
         "moment-timezone": "^0.5.45",
         "prettier": "^3.3.3"
-    },
-    "_moduleAliases": {
-        "~": "./src"
     },
     "engines": {
         "node": ">=16.11.0"
